feat(auth): add login page with form validation and styling
- Implement login form using react-hook-form for validation
- Add radix-ui components for styling and theming
- Include tailwindcss for utility classes
- Update dependencies to support new features

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "react-hook-form": "^7.61.1",
+    "react-router-dom": "^7.7.1"
+  }
 }
